# headstrong

./: Cargo.toml  README.md
config/: display.ron  globals.ron
src/: game_state.rs  main.rs
src/components/: mod.rs  mover.rs  physical.rs
src/generator/: mod.rs  png_gen.rs
src/navigation/: heuristic.rs  mod.rs  navigation.rs  successors.rs
src/systems/: mod.rs  mover.rs  physical.rs
