[package]
name = "headstrong"
version = "0.1.0"
authors = ["Jose Joaquin Talon <talon.joaquin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.12", features = ["vulkan"]}
ron = "0.5.1"
serde = "1.0.102"
