[package]
name = "headstrong"
version = "0.1.0"
authors = ["Jose Joaquin Talon <talon.joaquin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.13", features = ["vulkan"]}
ron = "0.5.1"
serde = "1.0.102"
lazy_static = "1.4.0"
png = "0.15.0"
priority-queue = "0.6.0"
angular = "0.1.1"
rand = "0.7.2"
pathfinding = "2.0.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
